--- a/SkateVids.bundle/Contents/Info.plist
+++ b/SkateVids.bundle/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.plexapp.plugins.skateboardtv</string>
+	<string>com.plexapp.plugins.skatevids</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
